test/errors/error3.sp
%id_1>id_2.
sorts
#s=ab..aa.  
predicates
rules
